--- a/db/templates/base.html
+++ b/db/templates/base.html
@@ -29,6 +29,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Search</a></li>
             <li><a href="/skillgem/">Skillgem</a></li>
+            <li><a href="/itemclass/">Items</a></li>
             <li><a href="#contact">...</a></li>
           </ul>
         </div>
