--- a/db/templates/base.html
+++ b/db/templates/base.html
@@ -23,14 +23,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">poehub</a>
+          <a class="navbar-brand" href="/">poehub</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Search</a></li>
             <li><a href="/skillgem/">Skillgem</a></li>
             <li><a href="/itemclass/">Items</a></li>
-            <li><a href="#contact">...</a></li>
+            <li><a href="/mod/">Mods</a></li>
           </ul>
         </div>
       </div>
