Add quests page

--- a/db/templates/base.html
+++ b/db/templates/base.html
@@ -31,6 +31,7 @@
             <li><a href="/skillgem/">Skillgem</a></li>
             <li><a href="/itemclass/">Items</a></li>
             <li><a href="/mod/">Mods</a></li>
+            <li><a href="/quest/">Quests</a></li>
           </ul>
         </div>
       </div>
