--- a/db/templates/skillgems.html
+++ b/db/templates/skillgems.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 {% for skillgem in skillgems %}
-<a href="{% url 'skillgem' skillgem.id %}">{{ skillgem.name }}</a><br>
+<a href="{% url 'skillgem' skillgem.name %}">{{ skillgem.name }}</a><br>
 {% endfor %}
 {% endblock %}
