--- a/db/templates/quests.html
+++ b/db/templates/quests.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% for quest in quests %}
 {% if not quest.title == "" %}
-<a href="{% url 'quest' quest.id %}">{{ quest.title }}</a><br>
+<a href="{% url 'quest' quest.title %}">{{ quest.title }}</a><br>
 {% endif %}
 {% endfor %}
 {% endblock %}
