--- a/db/templates/skillgem.html
+++ b/db/templates/skillgem.html
@@ -16,7 +16,7 @@
   </tr>
   {% for reward in rewards %}
   <tr>
-    <td><a href="{% url 'quest' reward.quest.id %}">{{ reward.quest.title }}</a></td>
+    <td><a href="{% url 'quest' reward.quest.title %}">{{ reward.quest.title }}</a></td>
     {% if reward.difficulty == 1 %}
     <td>Normal</td>
     {% elif reward.difficulty == 2 %}
